fix overflow

--- a/assets/css/start_style.css
+++ b/assets/css/start_style.css
@@ -2,6 +2,12 @@
  * Reset some basic elements
  */
 
+ * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
  :root{
     --color-white: #f0f0f0;
     --color-red: #be3144;
@@ -21,6 +27,14 @@
   /**
    * Basic styling
    */
+
+html, body {
+  overflow-x: hidden;
+  overflow-y: auto;
+  margin: 0;
+  padding: 0;
+}
+
   body {
     font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: #111;
@@ -54,13 +68,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100vh;   
+    text-align: center;
+    padding: 20px;  
   }
   
-
-
-  
+ 
   /**
    * Wrapper
    */
@@ -72,7 +84,7 @@
     padding-right: 30px;
     padding-left: 30px;
   }
-  
+
   @media screen and (max-width: 800px) {
     .wrapper {
       max-width: -webkit-calc(800px - (30px));
@@ -119,27 +131,21 @@
 }
 
 .picture {
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    margin: 20px auto; 
-    width: 71%;
-    max-width: 301px; 
-    aspect-ratio: 1 / 1; 
-    border: solid 2px #ffffff;
-    border-radius: 50%; 
-    overflow: hidden; 
-    position: relative; 
+  margin: 20px auto;
+  width: 70%;
+  max-width: 300px;
+  aspect-ratio: 1 / 1;
+  border: solid 2px #ffffff;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
 }
 
 .picture img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%; 
-    height: 100%; 
-    object-fit: cover; /* Maintains aspect ratio while covering the circle */
-    transition: transform 0.3s ease, filter 0.3s ease; 
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
 }
 
 .picture:hover img {
@@ -205,19 +211,23 @@
 /**
    * Site footer
 */
-footer{
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .site-footer {
-    border-top: 5px solid var(--color-green);
-    background-color: var(--color-gray);
-    color: var(--color-white);
-    padding-top: 10px;
+  border-top: 5px solid var(--color-green);
+  background-color: var(--color-gray);
+  color: var(--color-white);
+  padding: 10px 0;
 }
-
 
 .footer-wrapper {
     display: flex;
@@ -236,10 +246,11 @@ footer{
 .footer-wrapper .footer-right {
     text-align: right;
 }
-  
- .page-content{
-  margin-bottom: calc(var(--footer-height) + 10px);  
- }
+
+
+.page-content {
+  margin-bottom: calc(var(--footer-height) + 10px);
+}
 
 
   
